--- a/.github/workflows/devsecops.yaml
+++ b/.github/workflows/devsecops.yaml
@@ -37,3 +37,8 @@ jobs:
         uses: aquasecurity/trivy-action@master
         with:
           image-ref: 'devsecops-fastapi-app:latest'
+      
+      - name: Upload Trivy scan results to GitHub Security tab
+        uses: github/codeql-action/upload-sarif@v3
+        with:
+          sarif_file: 'trivy-results.sarif'
