--- a/.github/workflows/devsecops.yaml
+++ b/.github/workflows/devsecops.yaml
@@ -4,6 +4,10 @@ on:
   push:
     branches: [main]
 
+permissions:
+  contents: read
+  security-events: write 
+
 jobs:
   devsecops:
     runs-on: ubuntu-latest
