feat: add terraform and kubernetes

--- a/.github/workflows/devsecops.yaml
+++ b/.github/workflows/devsecops.yaml
@@ -65,3 +65,42 @@ jobs:
           IMAGE="${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_ARTIFACT_REPO_NAME }}/devsecops-fastapi-app:${{ github.sha }}"
           docker tag devsecops-fastapi-app:latest $IMAGE
           docker push $IMAGE
+
+      - name: Set up Terraform
+        uses: hashicorp/setup-terraform@v2
+        with:
+          terraform_version: 1.5.7
+
+      - name: Create terraform.tfvars from secrets
+        run: |
+          echo 'project_id = "${{ secrets.GCP_PROJECT_ID }}"' > terraform/terraform.tfvars
+          echo 'region     = "${{ secrets.GCP_REGION }}"' >> terraform/terraform.tfvars
+          echo 'repo_name  = "${{ secrets.GCP_ARTIFACT_REPO_NAME }}"' >> terraform/terraform.tfvars
+
+      - name: Terraform Init
+        working-directory: terraform
+        run: terraform init
+
+      - name: Terraform Plan
+        working-directory: terraform
+        run: terraform plan -var-file=terraform.tfvars
+
+      - name: Terraform Apply
+        working-directory: terraform
+        run: terraform apply -auto-approve -var-file=terraform.tfvars
+      
+      - name: Get GKE credentials
+        run: |
+          gcloud container clusters get-credentials fastapi-cluster \
+            --region ${{ secrets.GCP_REGION }} \
+            --project ${{ secrets.GCP_PROJECT_ID }}
+
+      - name: Replace image reference in deployment.yaml
+        run: |
+          sed -i "s|<IMAGE_PLACEHOLDER>|${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_ARTIFACT_REPO_NAME }}/devsecops-fastapi-app:${{ github.sha }}|" k8s/deployment.yaml
+
+      - name: Deploy to GKE
+        run: |
+          kubectl apply -f k8s/deployment.yaml
+          kubectl apply -f k8s/service.yaml
+
