test: make pytest fail intentionally

--- a/.github/workflows/devsecops.yaml
+++ b/.github/workflows/devsecops.yaml
@@ -23,6 +23,8 @@ jobs:
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
+        with:
+          category: "/language:python"
 
       - name: Scan for secrets with GitLeaks
         uses: gitleaks/gitleaks-action@v2
