--- a/.github/workflows/devsecops.yaml
+++ b/.github/workflows/devsecops.yaml
@@ -75,6 +75,7 @@ jobs:
           output: 'trivy-results.sarif'
           severity: 'CRITICAL,HIGH'
           ignore-unfixed: false
+          exit-code: "1"
       
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v3
