--- a/.github/workflows/devsecops.yaml
+++ b/.github/workflows/devsecops.yaml
@@ -135,7 +135,22 @@ jobs:
       - name: Replace image reference in deployment.yaml
         run: |
           sed -i "s|<IMAGE_PLACEHOLDER>|${{ secrets.GCP_REGION }}-docker.pkg.dev/${{ secrets.GCP_PROJECT_ID }}/${{ secrets.GCP_ARTIFACT_REPO_NAME }}/devsecops-fastapi-app:${{ github.sha }}|" k8s/deployment.yaml
-
+      
+      - name: Apply violating pod
+        run: |
+          cat <<EOF | kubectl apply -f -
+          apiVersion: v1
+          kind: Pod
+          metadata:
+            name: forbidden-pod
+            namespace: default
+          spec:
+            containers:
+              - name: bad
+                image: busybox:latest
+                command: ["sleep", "3600"]
+          EOF
+                            
       - name: Deploy to GKE
         run: |
           kubectl apply -f k8s/deployment.yaml
