--- a/.github/workflows/devsecops.yaml
+++ b/.github/workflows/devsecops.yaml
@@ -55,6 +55,7 @@ jobs:
           framework: terraform
           output_format: cli,sarif
           output_file_path: console,terraform-results.sarif
+          soft_fail: true
 
       - name: Upload Checkov scan results
         uses: github/codeql-action/upload-sarif@v3
@@ -74,6 +75,7 @@ jobs:
           output: 'trivy-results.sarif'
           severity: 'CRITICAL,HIGH'
           ignore-unfixed: false
+          exit-code: "1"
       
       - name: Upload Trivy scan results to GitHub Security tab
         uses: github/codeql-action/upload-sarif@v3
